force-app/main/default/objects/Milestone__c/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <formula>IF(Sum_To_Do_Items__c = 0, 0, Completed_Items__c /  Sum_To_Do_Items__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>