force-app/main/default/objects/Milestone__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF( Progress__c  = 0, &apos;Not Started&apos; ,  IF(Progress__c &gt;= 1, &apos;Complete&apos;, &apos;In Progress&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>