force-app/main/default/objects/Milestone__c/fields/Sum_To_Do_Items__c.field-meta.xml
<CustomField>
    <fullName>Sum_To_Do_Items__c</fullName>
    <label>Sum of to-do Items</label>
    <summaryForeignKey>Item__c.Milestone__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>